# machine-learning-ui

./: .dockerignore  .gitignore  Dockerfile  LICENSE  LICENSE.md  README.md  compose.dev.yaml  compose.yaml  jupyter_notebook_config.py  main.ipynb  pyproject.toml  requirements.txt
.binder/: environment.yml  requirements-dev.txt  requirements.txt
.github/workflows/: docker.yaml  docker.yml  sphinx.yaml  sphinx.yml
.ipynb_checkpoints/: main-checkpoint.ipynb
absd/: ddd.py  sss.py  ttf.py  tttt.py
db/Datasets/: test.txt  test_dataset.csv  test_dataset.tsv  test_dataset.txt  test_dataset_colon.csv  test_dataset_colon_comma.csv  test_dataset_wrong_and_nan.csv  test_float.txt
db/Models/: test_float.h5  test_model.h5
docs/: README.md  environment.yml  requirements-docs.txt  requirements.txt
docs/guide/: Guide.md
docs/source/: APIDocs.rst  AcceptedInput.rst  Managers.rst  UserGuide.rst  conf.py  index.rst
docs/src/: AcceptedInput.rst  AppPackage.rst  DataManager.rst  ModelManager.rst  UserGuide.rst  api.rst  conf.py  index.rst  local_installation.md  local_installation.rst  supported_data_file_formats.rst  user_guide.rst  user_manual.rst
src/: main.ipynb
src/CustomOptimizers/: AdaMod.py  Apollo.py
src/DataClasses/: Config.py  Data.py  Layer.py  Model.py  WidgetWrapper.py  __init__.py
src/Enums/: Activations.py  Callbacks.py  CautionMessages.py  ErrorMessages.py  Layers.py  Losses.py  Metrics.py  (+6 more)
streamlit-integration/: multiselect_tester.py  🏠_Home.py
tests/: conftest.py  test_data.py  test_data_manager.py  test_model.py  test_model_manager.py
(+264 files in other folders)
