[tool.poetry]
name = "machine-learning-ui"
version = "0.2.0"
description = "Streamlit app for basic Machine Learning workflows"
authors = ["SPbU"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/quantum-entangled/machine-learning-ui"
documentation = "https://quantum-entangled.github.io/machine-learning-ui/index.html"
keywords = ["python", "machine learning"]
packages = [{include = "mlui", from = "src"}]
include = [
    {path = "tests", format = "sdist"},
    {path = "docs", format = "sdist"}
]
exclude = [".github", ".gitignore"]

[tool.poetry.dependencies]
python = "~3.11.0"
pandas = "~2.0.3"
numpy = "~1.24.3"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.12.1"
pydot = "~1.4.2"
streamlit = "~1.24.1"
scikit-learn = "~1.3.0"
plotly = "~5.15.0"

[tool.poetry.group.dev.dependencies]
black = "~23.7.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.0.1"
furo = "^2023.5.20"
myst-parser = "^2.0.0"

[tool.poetry.group.windows]
optional = true

[tool.poetry.group.windows.dependencies]
tensorflow-intel = "2.12.1"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
